[package]
name = "nocturne"
version = "0.1.0"
authors = ["Duncan <bonsairobo@gmail.com>"]
edition = "2018"

[dependencies]
cpal = { git = "https://github.com/RustAudio/cpal.git" }
env_logger = "*"
futures = "*"
hound = "*"
log = "*"
midir = "*"
midly = "*"
pitch_calc = "*"
structopt = "*"
time_calc = "*"
tokio = { version = "*", features = ["blocking", "macros", "rt-threaded", "sync", "stream", "signal", "time"] }
wmidi = "*"
